# Pico

./: CootiePy.code-workspace  LICENSE  Pico.code-workspace  README.txt  code.py  code1.py  code3.py  code_2.py  cody_P1W_MP.py  flow4.json  gps.py  pc_2_pico_udp_test.py  pico_udp_node-red_demo.json  settings.toml
adafruit-circuitpython-bundle-9.x-mpy-20250415/: VERSIONS.txt
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/: VERSIONS.txt
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/examples/axp2101/: axp2101_power_key_press.py  axp2101_simpletest.py
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/examples/buildhat/: active_motor.py  color_distance_sensor.py  color_sensor.py  distance_sensor.py  light_matrix.py  simpletest.py
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/examples/m5stack_pbhub/: m5stack_pbhub_simpletest.py
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/lib/: AT24MAC_EEPROM.mpy  adafruit_discordbot.mpy  adafruit_soundboard.mpy  arrowline.mpy  async_buzzer.mpy  axp192.mpy  axp2101.mpy  azurecustomvision_prediction.mpy  barbudor_tmp75.mpy  biffobear_as3935.mpy  ble_cycling_power_service.mpy  candlesticks.mpy  caveble.mpy  cedargrove_ad5245.mpy  cedargrove_ad5293.mpy  cedargrove_ad9833.mpy  cedargrove_chime.mpy  cedargrove_colorfader.mpy  cedargrove_drv8830.mpy  cedargrove_midi_tools.mpy  cedargrove_ohmslaw.mpy  cedargrove_punkconsole.mpy  cedargrove_rangeslicer.mpy  cedargrove_shadowwatcher.mpy  cedargrove_wavebuilder.mpy  cedargrove_waveviz.mpy  circuitpython_cirque_pinnacle.mpy  circuitpython_csv.mpy  circuitpython_display_frame.mpy  circuitpython_hmac.mpy  circuitpython_parse.mpy  circuitpython_uuid4.mpy  community_tca9555.mpy  creativecontrol_circuitpython_ltc166x.mpy  displayio_listselect.mpy  displayio_st7565.mpy  dynamixel.mpy  e_ink_seg_display.mpy  electronutlabs_ili9163.mpy  electronutlabs_lis2dh12.mpy  (+50 more)
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/lib/P1AM/: P1AM.mpy  __init__.mpy  constants.mpy
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/lib/absolute_mouse/: __init__.mpy  descriptor.mpy
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/lib/ansi_escape_code/: __init__.mpy  progressbar.mpy
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/requirements/buildhat/: pyproject.toml  requirements.txt
circuitpython-community-bundle-9.x-mpy-20250413/circuitpython-community-bundle-9.x-mpy-20250413/requirements/m5stack_pbhub/: pyproject.toml
lib/: JSONwsClient.py  WebSockets.py  definition.py  example.py
pico1w/: boot_out.txt  code.py
(+624 files in other folders)
