# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Dario Cammi
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-m5stack-pbhub"
description = "CircuitPython driver for M5Stack PbHub"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Dario Cammi", email = "dcammi@gmail.com"}
]
urls = {Homepage = "https://github.com/CDarius/CircuitPython_M5Stack_PbHub"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "m5stack_pbhub",
    "m5stack",
    "pbhub",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["m5stack_pbhub"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
